Refactor project dependencies and structure for clean architecture alignment
- Removed unnecessary project references in LogiTrack.Application and LogiTrack.Infrastructure.
- Added missing project reference to LogiTrack.Infrastructure in LogiTrack.Test.
- Updated LogiTrack.Domain to include Entities folder for better organization.
- Removed unused placeholder class from LogiTrack.Domain.
- Ensured DTOs folder is included in LogiTrack.API for API-specific data

--- a/LogiTrack.Test/LogiTrack.Test.csproj
+++ b/LogiTrack.Test/LogiTrack.Test.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="../LogiTrack.Application/LogiTrack.Application.csproj" />
     <ProjectReference Include="../LogiTrack.Domain/LogiTrack.Domain.csproj" />
+    <ProjectReference Include="../LogiTrack.Infrastructure/LogiTrack.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
