--- a/LogiTrack.API/LogiTrack.API.csproj
+++ b/LogiTrack.API/LogiTrack.API.csproj
@@ -15,8 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../LogiTrack.Application/LogiTrack.Application.csproj" />
-    <ProjectReference Include="../LogiTrack.Infrastructure/LogiTrack.Infrastructure.csproj" />
+    <Folder Include="DTOs/" />
   </ItemGroup>
 
 </Project>
