--- a/LogiTrack.Application/LogiTrack.Application.csproj
+++ b/LogiTrack.Application/LogiTrack.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="../LogiTrack.Domain/LogiTrack.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs/" />
+  </ItemGroup>
+
 </Project>
