--- a/LogiTrack.Test/LogiTrack.Test.csproj
+++ b/LogiTrack.Test/LogiTrack.Test.csproj
@@ -26,4 +26,9 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Unit/" />
+    <Folder Include="Integration/" />
+  </ItemGroup>
+
 </Project>
