--- a/LogiTrack.API/appsettings.json
+++ b/LogiTrack.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "LogiTrack",
+    "Audience": "LogiTrack",
+    "DurationInMinutes": 30
+  }
 }
